# shmtu-cas-ocr-model

./: .gitignore  README.md  pyproject.toml
.github/workflows/: docs-pages.yml  release-model-assets.yml  sync-gitee-releases.yml
Documents/: .gitignore  package-lock.json  package.json
Documents/docs/: index.md
Documents/docs/.vitepress/: config.ts
Documents/docs/api-server/: http-api.md  overview.md  tcp-protocol.md
Documents/docs/paper/: abstract.md  augmentation-loss.md  conclusion.md  data-collection.md  experiments.md  introduction.md  model-architecture.md
Documents/docs/usage/: v1-overview.md  v2-data-collection.md  v2-eval-inference.md  v2-export.md  v2-quickstart.md  v2-training-config.md
scripts/: README.md  bench_multi.sh  bench_single.sh  cas_ocr_collect.sh  cas_ocr_download_weights.sh  cas_ocr_train.sh  chmod.sh  collect.sh  collect_local_8gpu.sh  env.sh  eval_accuracy.sh  evaluate.sh  export.sh  generate_dataset_split.py  package_dataset_zip.py  run_api_server.py  run_path.sh  split.sh  split_and_zip_dataset.sh  train.sh  train_new_or_resume.sh  train_resume.sh  vis.sh  visualize_test_predictions.py
scripts/api/: README.md  run_api_server.py
scripts/benchmark/: README.md  bench_multi.sh  bench_single.sh  bench_single_ncnn.sh  bench_single_onnx.sh  bench_single_pytorch.sh
scripts/collection/: README.md  collect.sh  collect_local_8gpu.sh  download_weights.sh
scripts/common/: ddp_port.sh  run_path.sh
scripts/data/: README.md  generate_dataset_split.py  split.sh  split_and_zip_dataset.sh
scripts/evaluation/: README.md  eval_accuracy.sh  evaluate.sh  evaluate_ncnn.sh  evaluate_onnx.sh  evaluate_pytorch.sh
scripts/export/: README.md  export_all.sh  export_ncnn.sh  export_ncnn_python.py  export_onnx.sh  export_torchscript.sh  generate_release_digest.sh  install_ncnn_tools.sh  merge_release_manifest.py  simulate_release.py  verify_common.py  verify_ncnn_against_pytorch.py  verify_onnx_against_pytorch.py
scripts/inference/: README.md  common.sh  predict.sh  predict_ncnn.sh  predict_onnx.sh  predict_pytorch.sh
scripts/output/: README.md  export_all.sh  export_ncnn.sh  export_onnx.sh  export_torchscript.sh  install_ncnn_tools.sh
scripts/release/: repair_release_manifest.py  sync_gitee_release_local.py  sync_gitee_releases.py  test_sync_gitee_release_local.py  test_sync_gitee_releases.py
scripts/training/: download_timm_backbone_weight.sh  run_one_epoch.sh  run_path.sh  train.sh  train_new_or_resume.sh  train_resume.sh
scripts/v1/: convert_all_to_onnx.py  convert_onnx_to_ncnn.ps1  convert_to_openvino.sh  count_dataset.py  download_datasets.sh  echo_dataset_count.sh  install.sh  predict_test.ipynb  train_all.py  统计文件数量.md
scripts/visualization/: README.md  vis.sh  visualize_test_predictions.py
src/cas_ocr_model/: expression.py
src/cas_ocr_model/api_server/: README.md  __init__.py  app.py  config.py  model_runner.py  service.py
src/cas_ocr_model/common/: __init__.py  checkpoint_pip.py  console.py  experiment_info.py  expression.py  preprocess.py  release_manifest.py  run_metadata.py
src/cas_ocr_model/datasets/: __init__.py  dataset_collector.py  format.py  manifest_info.py  split.py
src/cas_ocr_model/export/: export_ncnn.py  release_bundle.py  release_upload_list.py
src/cas_ocr_model/inference/: README.md  __init__.py  benchmark.py  cli.py  evaluate.py  inference.py  multi_gpu_benchmark.py  preprocess.py  (+1 more)
(+164 files in other folders)
