[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cas-ocr-model"
version = "2.0.0"
description = "SHMTU CAS 验证码识别模型训练与推理"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Haomin Kong" },
]

dependencies = [
    "accelerate>=0.27",
    "opencv-python>=4.5.0",
    "numpy",
    "scikit-learn",
    "pillow",
    "pyyaml",
    "torch>=2.0.0",
    "torchvision",
    "timm",
    "tqdm",
    "rich>=13.0",
    "matplotlib",
    "tomli; python_version < '3.11'",
]

[project.optional-dependencies]
export = [
    "onnx>=1.18",
    "onnxscript>=0.5",
    "onnxconverter-common>=1.14",
]
wandb = [
    "wandb>=0.17",
]
ncnn = [
    "pnnx",
    "ncnn",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["cas_ocr_model*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"cas_ocr_model.v1.tasks.digit" = ["test_images/*.png", "sample_captures/*.png"]
"cas_ocr_model.v1.tasks.equal_symbol" = ["test_images/*.png"]
"cas_ocr_model.v1.tasks.operator" = ["test_images/*.png"]

# pytest: 注入两个 src 根, 让测试可直接 import cas_ocr_model 和 shmtu_cas
# (替代在每个 tests/conftest.py 里手动 sys.path.insert)
# relative 路径基于 pyproject.toml 所在目录
[tool.pytest.ini_options]
pythonpath = [
    "src",
    "../Lib/shmtu-cas-python/src",
]
